--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.7",
     "@react-navigation/native-stack": "^7.3.11",
     "axios": "^1.9.0",
     "react": "19.0.0",
+    "react-content-loader": "^7.0.2",
     "react-hook-form": "^7.56.2",
     "react-native": "^0.79.2",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.23.8",
     "react-native-permissions": "^5.4.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-svg": "^15.12.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "zod": "^3.24.4"
@@ -41,17 +47,23 @@
     "@react-native/eslint-config": "0.79.1",
     "@react-native/metro-config": "0.79.1",
     "@react-native/typescript-config": "0.79.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "jest": {
+      "preset": "react-native",
+      "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
+    }
 }
