--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "node": ">=18"
   },
   "jest": {
-      "preset": "react-native",
-      "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
-    }
+  "preset": "react-native",
+  "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
+  "transformIgnorePatterns": [
+    "node_modules/(?!(jest-)?react-native|@react-native|@react-navigation|react-native-gesture-handler|react-native-screens|react-native-safe-area-context)"
+  ]
+}
 }
