--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-content-loader": "^7.0.2",
     "react-hook-form": "^7.56.2",
     "react-native": "^0.79.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
