--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,6 @@
-name: Android Debug APK CI
+name: Build APK
 
 on:
-  workflow_dispatch:
   push:
     branches: [main]
 
@@ -10,18 +9,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build Debug APK with Docker
-        run: |
-          docker build -t debug-apk-builder .
-          docker run --rm \
-            -v ${{ github.workspace }}/android/app/build/outputs/apk/debug:/output \
-            debug-apk-builder
+      - name: 🗃️ Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Upload Debug APK
+      - name: 🗃️ Cache npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      - name: 🐳 Build Docker Image & APK
+        run: |
+          docker build \
+            --build-arg KEYSTORE_BASE64="${{ secrets.KEYSTORE_BASE64 }}" \
+            -t android-apk-builder .
+        
+      - name: 📤 Copy APK from Docker container
+        run: |
+          docker create --name extract android-apk-builder
+          docker cp extract:/output/app-debug.apk ./app-debug.apk
+          docker rm extract
+
+      - name: 📦 Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug.apk
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+          path: app-debug.apk
